Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Sticky navigation bar with anchor links -->
   <header class="site-header">
     <nav class="topnav">
-      <div class="brand">Nidhi Lalwani</div>
+      <div class="brand"><img src="img/Screenshot 2025-05-29 134319.png" alt="Nidhi Lalwani Logo"></div>
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
@@ -75,6 +75,8 @@
         <div class="skill"><i class="fab fa-github"></i><span>GitHub</span></div>
         <div class="skill"><i class="fa-brands fa-js-square"></i><span>Basic JavaScript</span></div>
         <div class="skill"><i class="fa-solid fa-code"></i><span>C++</span></div>
+        <div class="skill"><i class="fa-brands fa-salesforce"></i><span>Salesforce</span></div>
+        <div class="skill"><i class="fa-solid fa-database"></i><span>SQL</span></div>
       </div>
     </div>
   </section>
@@ -87,43 +89,37 @@
       <div class="projects-list">
         <!-- HealthBankOne -->
         <article class="project-card">
-          <div class="project-media">HealthBankOne<br><small class="muted">Digital health records + wearables concept</small></div>
+          <div class="project-media">
+            <img src="img/Screenshot 2026-02-04 135827.png" alt="HealthBankOne app icon">
+          </div>
           <div class="project-content">
             <h3>HealthBankOne</h3>
             <p>Concept for unified digital health records and wearable integration to improve patient data continuity and clinician workflows.</p>
-            <p class="muted">Role: UX/UI + research</p>
-            <div class="project-actions">
-              <a href="#" class="btn btn-sm">Live</a>
-              <a href="#" class="btn btn-sm btn-outline">Repo</a>
-            </div>
+            <p class="muted">Role: UX/UI + research + mascot + prototyping</p>
           </div>
         </article>
 
         <!-- CareBridge -->
         <article class="project-card">
-          <div class="project-media">CareBridge<br><small class="muted">Elder-care and health monitoring</small></div>
+          <div class="project-media">
+            <img src="img/Screenshot 2026-02-04 141310.png" alt="CareBridge app icon">
+          </div>
           <div class="project-content">
             <h3>CareBridge</h3>
             <p>Design and prototype for an elder-care monitoring app, including a friendly mascot to improve adoption and usability testing.</p>
-            <p class="muted">Role: UX/UI + mascot + prototyping</p>
-            <div class="project-actions">
-              <a href="#" class="btn btn-sm">Live</a>
-              <a href="#" class="btn btn-sm btn-outline">Repo</a>
-            </div>
+            <p class="muted">Role: UX/UI + research + prototyping</p>
           </div>
         </article>
 
         <!-- Empower Her -->
         <article class="project-card">
-          <div class="project-media">Empower Her<br><small class="muted">South Asian art & storytelling campaign</small></div>
+          <div class="project-media">
+            <img src="img/Navratri.png" alt="Empower Her campaign visual">
+          </div>
           <div class="project-content">
             <h3>Empower Her</h3>
             <p>Visual design and storytelling campaign that centers South Asian women through digital art and narrative-driven visuals.</p>
             <p class="muted">Role: Visual design + storytelling</p>
-            <div class="project-actions">
-              <a href="#" class="btn btn-sm">Live</a>
-              <a href="#" class="btn btn-sm btn-outline">Repo</a>
-            </div>
           </div>
         </article>
       </div>
