Update "About Me" section with enhanced personal description and educational background

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <section id="about" class="section">
     <div class="container">
       <h2>About Me</h2>
-      <p class="muted">I studied at the University of Texas at Dallas and am currently pursuing graduate studies in IT Management. I focus on the intersection of design and product, bringing product thinking and research-led UX into the design process. I have worked on digital health concepts that connect wearable data and patient records to improve care coordination and user experience. In parallel, I create South Asian-inspired digital artwork that explores cultural narratives and visual storytelling.</p>
+      <p class="muted">I'm a product-focused designer and ITM graduate student passionate about creating meaningful, user-centered digital experiences. My work sits at the intersection of design, technology, data, and business strategy, where I combine creative thinking with analytical problem-solving. I hold a B.A. in Arts, Technology, and Emerging Communication with a minor in Psychology from the University of Texas at Dallas, and I'm currently pursuing my M.S. in Information Technology & Management at the Naveen Jindal School of Management. I have worked on digital health concepts that connect wearable data and patient records to improve care coordination and user experience. In parallel, I create South Asian-inspired digital artwork that explores cultural narratives and visual storytelling.</p>
     </div>
   </section>
 
